# poc-portal-backend

./: .gitignore  README.md  pyproject.toml  setenv.sh  startup.sh
alembic/: env.py
app/: .flake8  bootstrap-dev.sh  common.sh  dev-example.env  initial_data.py  invoke.yaml  logging.yml  main.py  package.json  pyproject.toml  setenv.sh  test-email-app.py  test-email.py  utils.py
app/alembic/: env.py
app/alembic/versions/: dae41494ce3b_init.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: donations.py  stripe_webhook.py  utils.py
app/app/: backend_pre_start.py  celeryworker_pre_start.py  initial_data.py  main.py  utils.py  worker.py
app/app/api/: deps.py
app/app/api/api_v1/: api.py
app/app/api/api_v1/endpoints/: donations.py  login.py  stripe_webhook.py  users.py  utils.py
app/app/core/: celery_app.py  config.py  datetime.py  logging.py  os.py  security.py
app/app/crud/: __init__.py  base.py  crud_donation.py  crud_user.py
app/app/data/: country.py  country.yaml
app/app/db/: base.py  base_class.py  init_db.py  session.py
app/app/models/: __init__.py  donation.py  user.py
app/app/schemas/: __init__.py  donation.py  msg.py  token.py  user.py
app/app/stripe/: __init__.py  checkout.py  webhook.py
app/app/tests/: conftest.py
app/app/tests/api/api_v1/: test_donation.py  test_login.py  test_users.py
app/app/tests/crud/: test_donation.py  test_user.py
app/app/tests/utils/: user.py  utils.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_donation.py  crud_user.py
app/db/: base.py  base_class.py  init_db.py  session.py
app/deployment/nginx/: portal-demo.conf
app/deployment/postgresql/: setup.sh
app/deployment/systemd/: portal-demo.service
app/email-templates/src/: README.md
app/models/: __init__.py  donation.py  user.py
app/schemas/: __init__.py  donation.py  user.py
app/stripe/: webhook.py
app/tasks/: __init__.py  common.py  country.py  database.py  email.py  git.py  start.py  stripe.py
doc/: deployment.md
tasks/: __init__.py  database.py  git.py
